<resources>
    <string name="app_name">Story Space</string>
    <string name="story_space_logo_description">Story Space Logo</string>
    <string name="app_tagline">Discover the Story Behind Every Headline.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_first">Register first</string>
    <string name="idea_1">Browse through an exciting collection of user-generated stories, complete with user names and captivating photos.</string>
    <string name="idea_2">Browse through an exciting collection of user-generated stories, complete with user names and captivating photos.</string>
    <string name="idea_3">Share your unique experiences by adding your own stories. Simply upload a photo from your gallery and craft a compelling description.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="register_btn">Register</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="email_invalid">Email format are invalid!</string>
    <string name="password_invalid">Password must be up to 8 characters long!</string>
    <string name="display_appearance_title">Display Appearance</string>
    <string name="toggle_dark_mode_theme_title">Toggle Dark Mode Theme</string>
    <string name="use_dark_mode_title">Use Dark Mode</string>
    <string name="languages_title">Languages</string>
    <string name="modify_your_language_settings_description">Modify your language settings</string>
    <string name="change_language_title">Change Language</string>
    <string name="preferences">Preferences</string>
    <string name="login_failed">Login failed</string>
    <string name="register_detail_invalid">Please enter valid details</string>
    <string name="let_s_get_started">Let\'s get Started!</string>
    <string name="logout_title">Logout</string>
    <string name="error_fetching_story">Error Fetching Story: %1$s</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_new_story">Add new story</string>
    <string name="compose_a_story">Compose</string>
    <string name="capture_title">Capture</string>
    <string name="capture_story_description">Capture story</string>
    <string name="browse_gallery_description">browse gallery</string>
    <string name="story_image_preview_description">Story Image Preview</string>
    <string name="gallery_title">Gallery</string>
    <string name="compose_your_story_details_hint">Compose Your Story Details..</string>
    <string name="what_s_the_story_about_hint">What\'s The Story About?</string>
    <string name="add_story_btn_title">Add</string>
    <string name="fail_to_show_camera">Fail to show Camera..</string>
    <string name="image_file_cannot_be_null_warning">Image file cannot be null</string>
    <string name="error_uploading_this_story">Error uploading this story</string>
    <string name="story_detail">Story Detail</string>
    <string name="swap_camera">swap camera</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Get latest stories right in your home screen</string>
    <string name="no_story_at_the_moment">No Story at the moment</string>
    <string name="latest_story_for_you">Latest Story for you</string>
    <string name="please_wait_while_we_fetching_stories_for_you">Please wait while we fetching stories for you..</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="style_parsing_failed_error">Style parsing failed.</string>
    <string name="cannot_find_style_error">Cannot find style! Error</string>
    <string name="share_your_location">Share your Location?</string>
    <string name="retry">Retry</string>
    <string name="where_this_story_from">Where this story from?</string>
    <string name="location_are_not_found_lat_lon">location are not found lat: %1$s lon: %2$s</string>
    <string name="failed_to_get_location">Failed to get location</string>


</resources>