<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.avwaveaf.storyspace.view.home.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.avwaveaf.storyspace.view.home.ui.settings.SettingsFragment"
        android:label="@string/preferences"
        tools:layout="@xml/preferences" />

    <fragment
        android:id="@+id/composeStoryFragment"
        android:name="com.avwaveaf.storyspace.view.home.ui.compose.ComposeStoryFragment"
        android:label="@string/compose_a_story"
        tools:layout="@layout/fragment_compose_story" />

    <action
        android:id="@+id/action_global_composeStoryFragment"
        app:destination="@id/composeStoryFragment"
        app:popUpTo="@id/navigation_home"
        app:popUpToInclusive="false" />

</navigation>
