<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".view.welcome.MainActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/circle_background"
        android:transitionName="sharedCircle"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintVertical_bias="0.471" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/story_space_logo_description"
        android:transitionName="sharedLogo"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
        app:layout_constraintVertical_bias="0.287"
        app:srcCompat="@drawable/main_logo" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.StorySpace.Headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_tagline"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.StorySpace.Caption"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_captivating_stories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:drawablePadding="16dp"
        android:padding="12dp"
        android:text="@string/idea_1"
        android:textAppearance="@style/TextAppearance.StorySpace.BodyText"
        app:drawableStartCompat="@drawable/baseline_lightbulb_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

    <TextView
        android:id="@+id/tv_detail_stories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:drawablePadding="16dp"
        android:padding="12dp"
        android:text="@string/idea_2"
        android:textAppearance="@style/TextAppearance.StorySpace.BodyText"
        app:drawableStartCompat="@drawable/baseline_menu_book_24"
        app:layout_constraintEnd_toEndOf="@id/tv_captivating_stories"
        app:layout_constraintStart_toStartOf="@id/tv_captivating_stories"
        app:layout_constraintTop_toBottomOf="@id/tv_captivating_stories" />

    <TextView
        android:id="@+id/tv_contribute"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:drawablePadding="16dp"
        android:padding="12dp"
        android:text="@string/idea_3"
        android:textAppearance="@style/TextAppearance.StorySpace.BodyText"
        app:drawableStartCompat="@drawable/baseline_palette_24"
        app:layout_constraintEnd_toEndOf="@id/tv_detail_stories"
        app:layout_constraintStart_toStartOf="@id/tv_detail_stories"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_stories"

        tools:layout_editor_absoluteX="16dp" />


    <Button
        android:id="@+id/btn_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/let_s_get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.motion.widget.MotionLayout>
