<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.ui.compose.ComposeStoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <!-- Image preview -->
        <ImageView
            android:id="@+id/iv_image_preview"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/story_image_preview_description"
            android:scaleType="centerInside"
            android:src="@drawable/ic_place_holder"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Camera button -->
        <Button
            android:id="@+id/btn_camera"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/md_theme_surfaceContainerHigh_semi"
            android:contentDescription="@string/capture_story_description"
            android:drawableLeft="@drawable/baseline_add_a_photo_24"
            android:textAppearance="@style/TextAppearance.StorySpace.Button"
            app:layout_constraintBottom_toBottomOf="@id/iv_image_preview"
            app:layout_constraintEnd_toStartOf="@id/btn_gallery"
            app:layout_constraintTop_toBottomOf="@id/iv_image_preview"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_surfaceContainerHigh_semi"
            android:text="@string/capture_title"
            android:textAppearance="@style/TextAppearance.StorySpace.Caption"
            app:layout_constraintEnd_toEndOf="@id/btn_camera"
            app:layout_constraintStart_toStartOf="@id/btn_camera"
            app:layout_constraintTop_toBottomOf="@id/btn_camera" />

        <!-- Gallery button -->
        <Button
            android:id="@+id/btn_gallery"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/md_theme_surfaceContainerHigh_semi"
            android:contentDescription="@string/browse_gallery_description"
            android:drawableLeft="@drawable/baseline_add_photo_alternate_24"
            android:textAppearance="@style/TextAppearance.StorySpace.Button"
            app:layout_constraintBottom_toBottomOf="@id/btn_camera"
            app:layout_constraintEnd_toStartOf="@id/btn_add_story"
            app:layout_constraintTop_toTopOf="@id/btn_camera"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/btn_gallery_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_surfaceContainerHigh_semi"
            android:text="@string/gallery_title"
            android:textAppearance="@style/TextAppearance.StorySpace.Caption"
            app:layout_constraintEnd_toEndOf="@id/btn_gallery"
            app:layout_constraintStart_toStartOf="@id/btn_gallery"
            app:layout_constraintTop_toBottomOf="@id/btn_gallery" />

        <Button
            android:id="@+id/btn_add_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="34dp"
            android:contentDescription="@string/add_new_story"
            android:drawableEnd="@drawable/baseline_send_24"
            android:drawablePadding="16dp"
            android:enabled="false"
            android:text="@string/add_story_btn_title"
            android:textAppearance="@style/TextAppearance.StorySpace.BodyText"
            app:layout_constraintBottom_toBottomOf="@id/btn_gallery_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_gallery"
            tools:ignore="RtlHardcoded" />

        <!-- Title input field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_story_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:hint="@string/what_s_the_story_about_hint"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/btn_camera">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_story_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="2"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:textAppearance="@style/TextAppearance.StorySpace.SubHeadline"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Description input field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_story_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/compose_your_story_details_hint"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/til_story_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_story_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textAppearance="@style/TextAppearance.StorySpace.BodyText"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:layout_width="match_parent"
            android:text="@string/share_your_location"
            android:id="@+id/switch_include_location"
            app:layout_constraintTop_toBottomOf="@id/til_story_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="16dp"
            android:paddingHorizontal="16dp"
            android:textAppearance="@style/TextAppearance.StorySpace.Caption"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/laoding_overlay"
            android:layout_width="match_parent"
            android:background="@drawable/screen_overlay_loading"
            android:alpha="0.7"
            android:visibility="gone"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="0dp" />

        <View
            android:id="@+id/pb_background_overlay"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:background="@drawable/circle_background"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/pb_loading"
            app:layout_constraintBottom_toBottomOf="@id/pb_loading"
            app:layout_constraintStart_toStartOf="@id/pb_loading"
            app:layout_constraintEnd_toEndOf="@id/pb_loading"
        />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
         />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>