<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <View
        android:id="@+id/view2"
        android:layout_width="142dp"
        android:layout_height="142dp"
        android:background="@drawable/circle_background"
        android:transitionName="sharedCircle"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintVertical_bias="0.471" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="142dp"
        android:layout_height="142dp"
        android:contentDescription="@string/story_space_logo_description"
        android:transitionName="sharedLogo"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287"
        app:srcCompat="@drawable/main_logo" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.StorySpace.Headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:alpha="1" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/app_tagline"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.StorySpace.Caption"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:alpha="1" />

    <TextView
        android:id="@+id/tv_login_headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.StorySpace.SubHeadline"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        tools:alpha="1" />


    <com.avwaveaf.storyspace.customviews.EmailEditText
        android:id="@+id/ed_login_email"
        style="@style/EditTextStyle"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:drawableStart="@drawable/baseline_email_24"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal"
        tools:alpha="1" />

    <com.avwaveaf.storyspace.customviews.PasswordEditText
        android:id="@+id/ed_login_password"
        style="@style/EditTextStyle"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:drawableStart="@drawable/baseline_password_24"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_login_email"
        tools:alpha="1" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:alpha="0"
        android:enabled="false"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.StorySpace.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_login_password"
        tools:alpha="1" />


    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:alpha="0"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.StorySpace.Caption"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        tools:alpha="1" />

    <Button
        android:id="@+id/btn_register"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/register_first"
        android:textAppearance="@style/TextAppearance.StorySpace.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_title"
        tools:alpha="1" />

    <View
        android:id="@+id/laoding_overlay"
        android:layout_width="match_parent"
        android:background="@drawable/screen_overlay_loading"
        android:alpha="0.7"
        android:visibility="gone"
        android:layout_height="match_parent" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>